# ctty

./: .gitignore  CMakeLists.txt  Makefile  README.md  escape-codes.h  input-esc-seqs.txt  keypress-codes.h  keypress.h  keyselect.c  keyselect.h  screen.h
.github/: README.md
ansi/: CMakeLists.txt  colors.c  colors.h  cursor.c  cursor.h  erase.h  text-modes.h
arraylist/: arraylist.c  arraylist.h
examples/: examples.md
include/ctty/: colors.h  cursor.h  keypress-codes.h  keypress.h  keyselect.h  menu.h  screen.h  view-file.h
info/: README.md  example.c
keypress/: CMakeLists.txt  keypress-codes.h  keypress.c  keypress.h  keyselect.h
menu/: CMakeLists.txt  menu.c  menu.h
screen/: CMakeLists.txt  screen.h  view-file.c  view-file.h
src/: colors.c  cursor.c  escape-codes.h  keycodes.h  keypress.c  keyselect.c  keyselect.h  main.c  menu.c  screen.c  screen.h  view-file.c
src/ansi/: colors.c  colors.h  cursor.c  cursor.h  erase.h
src/keypress/: CMakeLists.txt  keypress.c  keyselect.c  keyselect.h
src/menu/: menu.c  menu.h
src/screen/: screen.c  screen.h  view-file.c
